# clairvoyantedge-metadata

./: .gitignore  CMakeLists.txt  README.md
metadata/: CMakeLists.txt
metadata/conf/: metadata_manager_cfg.yaml
metadata/redis-lib/: CMakeLists.txt  redis-connection.cc  redis-connection.h  redis-messages.cc  redis-messages.h
metadata/scripts/: CMakeLists.txt  bbb.html  bbb_4k.csv  bbb_4k_new.csv  bbb_small.csv  data_uploader.cc  lg_4k.csv  metadata_fetcher.py  video_creator.sh
metadata/src/: CMakeLists.txt  main.cc  metadata-config-helper.cc  metadata-config-helper.h  metadata-server-impl.cc  metadata-server-impl.h  metadata-task-manager.cc  metadata-task-manager.h  metadata-task.cc  metadata-task.h  nearest-neighbor-info.cc  nearest-neighbor-info.h  nearestnodes-task.cc  nearestnodes-task.h
metadata/test/: CMakeLists.txt  README.md  metadata-client-test.cc  test.cc  test_cluster.cc
proto/: CMakeLists.txt  clairvoyantedge.proto
protos/: CMakeLists.txt  clairvoyant_meta.proto
scripts/: add_nodes.py  bbb.csv  cleanall.sh  cleanup_redis.sh  start_meta_svr.sh  start_redis_cluster.sh  stop_redis_cluster.sh  video_creator.sh
setup/: Vagrantfile  requirements.txt  root-bootstrap.sh  user-bootstrap.sh
src/: main.cc  metadata-server-impl.cc  metadata-server-impl.h  metadata-task.cc  metadata-task.h  redis-connection.cc  redis-connection.h  redis-messages.cc  redis-messages.h
test/: CMakeLists.txt  metadata-client-test.cc  start_redis_cluster.sh  stop_redis_cluster.sh  test.cc  test_cluster.cc  test_main.cc
